# jobshaman.cz

./: .directory  .dockerignore  .env  .env.example  .gitignore  .gitignore-azure-additions  AI_USAGE_REPORT.md  AUDIT_ACTION_ITEMS.md  AUDIT_DELIVERABLES.md  AUDIT_SUMMARY.md  AUDIT_VISUAL_SUMMARY.md  AZURE_DEPLOY.md  App.tsx  BACKEND_AUDIT_FINAL_REPORT.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  CRITICAL_BACKEND_AUDIT.md  CRITICAL_FIXES_PROGRESS.md  CRITICAL_SECURITY_FIXES.md  CSRF_FRONTEND_INTEGRATION.md  CSRF_IMPLEMENTATION_COMPLETE.md  CSRF_TOKEN_FIX.md  CSRF_TOKEN_MIGRATION.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  DUAL_STORAGE_REFERENCES.md  FINAL_CHECKLIST.md  GEOLOCATION_IMPLEMENTATION.md  GEOLOCATION_SETUP.md  GOVERNMENT_FUNDING_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  JHI_RECALIBRATION.md  MIGRATION_INTEGRATION_GUIDE.md  MOBILE_NETWORK_SETUP.md  (+85 more)
backend/: .dockerignore  .env  .env.example  DEPLOYMENT.md  Dockerfile  EMAIL_TESTING.md  LEGALITY_IMPROVEMENTS.md  check_all_mcq_matching.txt  geocoding.py  output.json  prod_items.json  pyproject.toml  query_live_jcfpm_all.txt  render.yaml  requirements.txt  scraper_multi.py  scratch_test_candidates.py  test_email.py  test_legality.py
backend/app/: app_factory.py  main.py
backend/jobshaman_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/migrations/: 001_add_team_invitation_columns.sql  001_core.sql  001_instant_gigs_schema.sql  002_media_assets.sql  (+7 more)
(+1204 files in other folders)
